[project]
name = "greencanvas"
version = "0.1.0"
description = ""
authors = [
    {name = "anamsmartins",email = "anaritamsmartins@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
# dependencies = [
#     "fake-bpy-module-3-4 (>=20250130,<20250131)",
# ]

# [build-system]
# requires = ["poetry-core>=2.0.0,<3.0.0"]
# build-backend = "poetry.core.masonry.api"
